Tue Nov 09 19:29:37 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: More refactoring.

Tue Nov 09 17:13:10 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: More refactoring.  Also rearranged the contents
	  of the quartz and btree headers, eliminating btree_types.h in the
	  process.

Tue Nov 09 16:47:13 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_metafile.cc: Using fdcloser is less clear in
	  trivial cases.

Tue Nov 09 16:38:47 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Close the fd of the lock file
	  before trying to rename it on Windows.

Tue Nov 09 07:58:02 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/btree_util.h: More refactoring.

Tue Nov 09 03:24:59 GMT 2004  Olly Betts <olly@survex.com>

	* xapian-config.in: Added --swigflags option for use with SWIG.

Mon Nov 08 22:54:55 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: If flags are needed to select ANSI
	  mode with the current compiler, then make xapian-config --cxxflags
	  include them so that Xapian users don't have to jump through the
	  same hoops we do.

Mon Nov 08 04:49:21 GMT 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,backends/muscat36/,
	  backends/net/net_database.cc,backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h,common/database.h,
	  common/net_database.h,matcher/localmatch.cc: If a database contains
	  no positional information, change NEAR and PHRASE queries into AND
	  queries (as otherwise they'd return no matches at all) (bug#56).
	* tests/api_wrdb.cc: Added feature test phraseorneartoand1.

Mon Nov 08 04:09:04 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac,backends/quartz/btree.cc: Improved what we do to
	  turn on pread and pwrite declarations in unistd.h so that it works