@@ -1,3 +1,9 @@
+Tue Nov 09 22:39:00 GMT 2004  Olly Betts <olly@survex.com>
+
+	* backends/quartz/btree.cc: Tweaked the pread/pwrite mess to try to
+	  get it to work on OSF and x86 Solaris while not breaking it
+	  elsewhere.
+
 Tue Nov 09 19:29:37 GMT 2004  Olly Betts <olly@survex.com>
 
 	* backends/quartz/btree.cc,backends/quartz/btree.h: More refactoring.
